# CerberusAI-Desktop

./: .gitignore  README.md  build_output.txt  index.html  landing_page.html  local_llm_config.txt  package-lock.json  package.json  test_install.ps1  tmp_benchmark_api.py  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: deploy-scripts.yml  release.yml
deploy/: get-cerberus.ps1  install.ps1
release-out/: Cerberus_0.1.0_x64_en-US.msi  SHA256SUMS.txt
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: hardware.rs  lib.rs  main.rs  ollama.rs  tuning.rs
