[package]
name = "cerberus-desktop"
version = "0.3.1"
description = "Cerberus AI — local-first chat dashboard"
authors = ["CerberusAI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cerberus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "fs", "time", "process"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "rustls-native-certs"] }
futures-util = "0.3"
sysinfo = "0.38"
log = "0.4"
anyhow = "1"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.56"
dirs = "6"

[target.'cfg(not(windows))'.dependencies]
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
